TS-3822 clang-analyzer: Value stored to 'stream' during its initialization is never read